[project]
name = "library"
version = "0.1.0"
description = ""
authors = [
    {name = "elgato",email = "elgato@ayagroup.pro"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "livereload (>=2.7.1,<3.0.0)",
    "more-itertools (>=10.8.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
